chore: import i18n resource

--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -3,62 +3,107 @@
   "common.button.cancel": "取消",
   "common.button.confirm": "确认",
   "common.button.edit": "编辑",
+  "common.button.reset": "重置",
   "common.button.save": "保存",
   "common.document.title": "Beaver IoT",
+  "common.label.403_forbidden": "403 禁止",
   "common.label.add": "添加",
+  "common.label.back": "返回",
   "common.label.banned": "禁止",
+  "common.label.bulk_deletion": "批量删除",
+  "common.label.bulk_removal": "批量移除",
+  "common.label.by_device": "基于设备",
+  "common.label.choices": "待选择",
+  "common.label.chosen": "已选",
   "common.label.click_to_try_fix": "点击尝试修复",
   "common.label.close": "关闭",
   "common.label.confirm_password": "确认密码",
   "common.label.connect": "连接",
+  "common.label.content": "内容",
   "common.label.copy": "复制",
   "common.label.copy_error_info": "复制错误信息",
+  "common.label.create": "创建",
   "common.label.create_time": "创建时间",
+  "common.label.creator": "创建者",
   "common.label.dashboard": "仪表板",
   "common.label.data_type": "数据类型",
   "common.label.day": "{1} 天",
   "common.label.days": "{1} 天",
   "common.label.delete": "删除",
+  "common.label.deletion": "删除",
   "common.label.detail": "详情",
   "common.label.device": "设备",
   "common.label.edit_title": "编辑{1}",
+  "common.label.editor": "编辑器",
   "common.label.email": "电子邮件",
   "common.label.empty": "无数据",
+  "common.label.enable_status": "启用状态",
   "common.label.enable_title": "启用{1}",
   "common.label.entity": "实体",
+  "common.label.error": "错误",
+  "common.label.export": "导出",
+  "common.label.false": "False",
   "common.label.hour": "{1} 小时",
   "common.label.hours": "{1} 小时",
   "common.label.image": "图片",
   "common.label.import": "导入",
+  "common.label.input": "输入",
   "common.label.integration": "集成",
   "common.label.json": "JSON",
   "common.label.key": "键",
+  "common.label.label": "标签",
+  "common.label.language": "语言",
   "common.label.last_modified_time": "最后更新时间",
+  "common.label.log": "日志",
   "common.label.login": "登录",
   "common.label.max": "最大",
   "common.label.min": "最小",
+  "common.label.minutes": "{1} 分钟",
   "common.label.more": "更多",
+  "common.label.ms": "ms",
   "common.label.name": "名称",
+  "common.label.no_device_entity": "无设备归属实体",
+  "common.label.no_permissions": "无权限",
   "common.label.on": "开",
   "common.label.openapi": "OpenAPI",
   "common.label.operation": "操作",
+  "common.label.output": "输出",
+  "common.label.page_not_permission": "您没有访问权限，请联系管理员处理。",
   "common.label.password": "密码",
   "common.label.readonly": "只读",
   "common.label.register": "注册",
+  "common.label.remark": "备注",
+  "common.label.removal": "移除",
+  "common.label.remove": "移除",
+  "common.label.rename": "重命名",
+  "common.label.run": "运行",
   "common.label.search": "搜索",
   "common.label.second": "{1} 秒",
   "common.label.seconds": "{1} 秒",
+  "common.label.selected": "选中",
   "common.label.service": "服务",
   "common.label.setting": "设置",
+  "common.label.sign_out": "登出",
+  "common.label.sort_type_newest_to_oldest": "最新至最早",
+  "common.label.sort_type_oldest_to_newest": "最早至最新",
+  "common.label.success": "成功",
   "common.label.table_disabled_status": "禁用状态",
+  "common.label.target": "目标",
+  "common.label.test": "测试",
   "common.label.time": "时间",
+  "common.label.tip": "提示",
   "common.label.title": "标题",
+  "common.label.true": "True",
   "common.label.type": "类型",
+  "common.label.unit": "单位",
+  "common.label.update_time": "更新时间",
   "common.label.url": "URL",
   "common.label.username": "用户名",
   "common.label.value": "值",
   "common.label.version": "版本",
   "common.label.webhook": "Webhook",
+  "common.label.week": "星期",
+  "common.label.workflow": "工作流",
   "common.label.writable": "可写\n",
   "common.language.cn": "中文",
   "common.language.cn_short": "ZH",
@@ -68,9 +113,11 @@
   "common.message.copy_successful": "复制成功。",
   "common.message.delete_success": "删除成功。",
   "common.message.error_user_business_details_not_exist": "用户无商务参数",
+  "common.message.json_format_error": "JSON格式错误",
   "common.message.no_results_found": "未找到结果。",
   "common.message.operation_success": "操作成功。",
   "common.message.register_helper_text": "欢迎！让我们开始创建一个用户账户。",
+  "common.message.remove_success": "移除成功",
   "common.message.something_wrong_title": "出错了",
   "common.modal.desc_leave_current_page": "您所调整的内容不会保存，是否确认离开此页面？",
   "common.modal.title_leave_current_page": "离开当前页面",
@@ -98,12 +145,17 @@
   "dashboard.label_latest_value": "最新值",
   "dashboard.label_max_value": "最大值",
   "dashboard.label_min_value": "最小值",
+  "dashboard.label_nearly_half_year": "近半年",
   "dashboard.label_nearly_one_days": "近1天",
+  "dashboard.label_nearly_one_month": "近一个月",
+  "dashboard.label_nearly_one_week": "近一周",
+  "dashboard.label_nearly_one_year": "近一年",
   "dashboard.label_nearly_six_hours": "近6小时",
   "dashboard.label_nearly_three_hours": "近3小时",
+  "dashboard.label_nearly_three_month": "近三个月",
   "dashboard.label_nearly_twelve_hours": "近12小时",
-  "dashboard.label_rename": "重命名",
   "dashboard.label_sum_value": "总值",
+  "dashboard.leave_to_new_dashboard_description": "是否要跳转至新创建的仪表盘，请注意当前仪表盘您修改的内容不会被保存。",
   "dashboard.plugin_class_data_card": "数据卡片",
   "dashboard.plugin_class_data_chart": "数据图表",
   "dashboard.plugin_class_operate": "可操作组件",
@@ -121,20 +173,46 @@
   "device.label.param_founder": "创建者",
   "device.label.param_source": "来源",
   "device.message.delete_tip": "确定要删除吗？",
+  "entity.label.create_entity_from_workflow": "基于工作流创建",
+  "entity.label.create_entity_only": "仅创建实体",
+  "entity.label.create_property": "创建属性",
+  "entity.label.create_service": "创建服务",
+  "entity.label.custom_entity": "自定义实体",
+  "entity.label.entity_items": "项",
+  "entity.label.entity_maximum_length": "最大长度",
+  "entity.label.entity_maximum_value": "最大值",
+  "entity.label.entity_minimum_length": "最小长度",
+  "entity.label.entity_minimum_value": "最小值",
+  "entity.label.entity_type_of_access": "访问类型",
+  "entity.label.entity_type_of_access_read_and_write": "可读可写",
+  "entity.label.entity_type_of_access_readonly": "只读",
+  "entity.label.entity_type_of_access_write": "只写",
+  "entity.label.entity_type_of_boolean": "BOOLEAN",
+  "entity.label.entity_type_of_double": "DOUBLE",
+  "entity.label.entity_type_of_long": "LONG",
+  "entity.label.entity_type_of_string": "STRING",
+  "entity.label.historical_data": "历史数据",
+  "entity.label.set_enumeration_items": "设置枚举项",
+  "entity.label.set_value": "设置值",
+  "entity.label.value_source": "值来源",
   "error.http.account_session_logout": "您的账户已退出登录。",
   "error.http.authentication_failed": "认证失败/未认证",
   "error.http.dashboard_name_exist": "仪表板名称已存在",
   "error.http.data_no_found": "数据未找到",
   "error.http.forbidden_permission": "没有访问权限，访问被禁止。",
   "error.http.method_not_allowed": "不允许的HTTP方法",
+  "error.http.name_repeated": "名称重复",
   "error.http.network_timeout": "网络连接超时。",
   "error.http.page_not_found": "抱歉，您访问的页面不存在。",
   "error.http.parameter_syntax_error": "参数语法错误",
   "error.http.parameter_validation_failed": "参数验证失败",
   "error.http.request_too_frequently": "请求过于频繁",
+  "error.http.role_does_not_exit": "角色不存在",
+  "error.http.role_still_has_user": "请先删除角色下的用户，再删除角色。",
   "error.http.server_error": "请求错误，请检查并重试。",
   "error.http.token_invalid": "令牌无效，请重试。",
   "error.http.token_not_found": "您的账户尚未登录。",
+  "error.http.user_has_no_permission": "当前用户无权限",
   "error.http.user_register_email_exist": "用户注册邮箱已存在。",
   "setting.integration.api_status": "API状态",
   "setting.integration.api_status_error": "API错误",
@@ -164,6 +242,46 @@
   "setting.integration.webhook_status_ready": "Webhook就绪",
   "setting.integration.webhook_status_waiting": "等待配置",
   "setting.integration.webhook_url": "Webhook URL",
+  "user.label.add_new_user_modal_title": "添加新的用户",
+  "user.label.add_role": "创建角色",
+  "user.label.bulk_delete_tip": "删除后不可恢复，是否确认批量删除{0}个用户？",
+  "user.label.edit_user_modal_title": "编辑用户",
+  "user.label.rename_role": "重命名角色",
+  "user.label.reset_password": "重置密码",
+  "user.label.role_table_title": "角色",
+  "user.label.single_delete_tip": "删除后不可恢复，是否确认删除用户：{0}?",
+  "user.label.user_name_table_title": "用户名",
+  "user.label.user_role": "用户与角色",
+  "user.message.not_data_roles_tip": "无数据，请先创建一个角色",
+  "user.role.add_user_member_modal_title": "绑定用户",
+  "user.role.bulk_dashboard_remove_tip": "是否确认批量移除{0}个仪表盘？",
+  "user.role.bulk_device_remove_tip": "是否确认批量移除{0}个设备？",
+  "user.role.bulk_integration_remove_tip": "移除之后，将不可访问改集成下的所有设备和独立于设备外的实体，是否确认批量的移除{0}个集成？",
+  "user.role.bulk_member_remove_tip": "是否确认批量的移除{0}个成员？",
+  "user.role.dashboard_permission_modal_title": "添加仪表盘权限",
+  "user.role.delete_tip": "删除后无法恢复，您是否确认删除角色：{0}？",
+  "user.role.device_can_not_remove_tip": "不可移除，来源集成已被选中，请先取消选中来源集成。",
+  "user.role.device_permission_modal_title": "添加设备权限",
+  "user.role.function_table_title": "权限",
+  "user.role.functions_tab_title": "功能权限",
+  "user.role.integration_name_table_title": "集成名称",
+  "user.role.integration_num_device_table_title": "设备数量",
+  "user.role.integration_num_entity_table_title": "实体数量",
+  "user.role.integration_permission_add_tip": "添加集成后将允许访问该集成下的所有设备和独立于设备外的实体数据。",
+  "user.role.integration_permission_modal_title": "添加集成权限",
+  "user.role.members_tab_title": "成员",
+  "user.role.model_table_title": "型号",
+  "user.role.page_table_title": "页",
+  "user.role.resource_dashboard_tab_title": "仪表盘权限",
+  "user.role.resource_device_tab_title": "设备权限",
+  "user.role.resource_integration_tab_title": "集成权限",
+  "user.role.resources_tab_title": "资源",
+  "user.role.roles_tab_name": "角色",
+  "user.role.single_dashboard_remove_tip": "是否确认移除仪表盘：{0}？",
+  "user.role.single_device_remove_tip": "是否确认移除设备：{0}？",
+  "user.role.single_integration_remove_tip": "移除之后，将不可访问改集成下的所有设备和独立于设备外的实体，是否确认移除集成：{0}？",
+  "user.role.single_member_remove_tip": "是否确认要移除用户：{0}？",
+  "user.role.users_tab_name": "用户",
   "valid.date.selected_time_greater_than_now_time": "不支持早于当前时间的时间。",
   "valid.date.start_time_greater_than_end_time": "开始时间不能晚于结束时间。",
   "valid.date.start_time_less_than_pre_end_time": "开始时间不能早于上次结束时间。",
@@ -224,8 +342,128 @@
   "valid.input.string_rules_two": "仅允许大写字母、小写字母、数字和!\"#$%&'()*+,-./:;<=>@[]^_`{|}~。",
   "valid.input.two_sixteen_hexadecimal": "请输入两个16位十六进制值，用“-”分隔。",
   "valid.input.url": "请输入有效的URL。",
-  "valid.input.username": "用户名必须包含大小写字母。",
+  "valid.input.username": "用户名长度最小长度为5。",
   "valid.input.value": "输入值：仅{0}。",
   "valid.input.version": "版本号不符合规范。",
-  "valid.resp.at_least_one": "请至少选择一个{1}。"
+  "valid.resp.at_least_one": "请至少选择一个{1}。",
+  "workflow.button.label_import_from_dsl": "导入DSL",
+  "workflow.context_menu.title_change_node": "更改节点",
+  "workflow.editor.config_panel_test_title": "测试{1}",
+  "workflow.editor.editor_auto_create_service_entity_tip": "系统会自动根据工作流名称创建一个自定义服务实体，你可以在自定义实体列表中查看该实体。",
+  "workflow.editor.form_button_add_condition": "添加条件",
+  "workflow.editor.form_logic_operator_switch_tip": "点击去转换",
+  "workflow.editor.form_param_execution_time": "执行时间",
+  "workflow.editor.form_param_execution_time_queue": "执行时间队列",
+  "workflow.editor.form_param_expire_time": "过期时间",
+  "workflow.editor.form_param_select_placeholder": "输入或引用变量",
+  "workflow.editor.form_param_timer_period_friday": "星期五",
+  "workflow.editor.form_param_timer_period_monday": "星期一",
+  "workflow.editor.form_param_timer_period_saturday": "星期六",
+  "workflow.editor.form_param_timer_period_sunday": "星期天",
+  "workflow.editor.form_param_timer_period_thursday": "星期四",
+  "workflow.editor.form_param_timer_period_tuesday": "星期二",
+  "workflow.editor.form_param_timer_period_wednesday": "星期三",
+  "workflow.editor.form_param_timer_type": "定时器类型",
+  "workflow.editor.form_param_timer_type_cycle": "周期执行",
+  "workflow.editor.form_param_timer_type_interval": "间隔执行",
+  "workflow.editor.form_param_timer_type_once": "单次执行",
+  "workflow.editor.log_panel_title_test_run": "运行测试",
+  "workflow.editor.log_panel_title_verification_result": "验证结果",
+  "workflow.editor.log_title_run": "运行日志",
+  "workflow.editor.log_title_test": "测试日志",
+  "workflow.editor.logs_popover_title_run": "运行日志",
+  "workflow.editor.logs_popover_title_test": "测试日志",
+  "workflow.editor.node_delete_confirm_desc": "确认删除节点？",
+  "workflow.editor.node_delete_confirm_title": "删除节点",
+  "workflow.editor.node_test_tip": "测试此节点",
+  "workflow.editor.save_warning_message": "当前工作流程已被引用，保存它将同步更新工作流程信息。您确定要保存?",
+  "workflow.editor.valid.condition_not_setup": "条件未设置",
+  "workflow.email.content_modal_title": "编辑邮件内容",
+  "workflow.email.label_content_recipients": "收件人",
+  "workflow.email.label_content_recipients_tip": "多个收件人之间需要使用“；”进行分隔",
+  "workflow.email.label_gmail_config_api_key": "SerpApi Api Key",
+  "workflow.email.label_smtp_config_encryption_method": "加密方式",
+  "workflow.email.label_smtp_config_encryption_none": "无",
+  "workflow.email.label_smtp_config_encryption_start_tls": "StartTLS",
+  "workflow.email.label_smtp_config_encryption_tls": "TLS",
+  "workflow.email.label_smtp_config_password": "SMTP 密码",
+  "workflow.email.label_smtp_config_service_host": "SMTP 服务器路径",
+  "workflow.email.label_smtp_config_service_port": "SMTP 端口",
+  "workflow.email.label_smtp_config_username": "SMTP 用户名",
+  "workflow.label.abnormal_edge_tip": "节点嵌套错误，请检查后重试。",
+  "workflow.label.assigner_node_name": "实体赋值",
+  "workflow.label.branch": "分支{1}",
+  "workflow.label.code_node_name": "代码",
+  "workflow.label.condition_operator_contains": "包含",
+  "workflow.label.condition_operator_end_with": "结束于",
+  "workflow.label.condition_operator_greater_than": "大于",
+  "workflow.label.condition_operator_greater_than_or_equal": "大于等于",
+  "workflow.label.condition_operator_is": "等于",
+  "workflow.label.condition_operator_is_empty": "为空",
+  "workflow.label.condition_operator_is_not": "不等于",
+  "workflow.label.condition_operator_is_not_empty": "不为空",
+  "workflow.label.condition_operator_less_than": "小于",
+  "workflow.label.condition_operator_less_than_or_equal": "小于等于",
+  "workflow.label.condition_operator_not_contains": "不包含",
+  "workflow.label.condition_operator_start_with": "起始于",
+  "workflow.label.design_mode_advanced_name": "高级模式",
+  "workflow.label.design_mode_canvas_name": "画布模式",
+  "workflow.label.email_node_name": "邮件通知",
+  "workflow.label.entry_node_number_limit_tip": "工作流中必须且仅允许有 {1} 个入口节点",
+  "workflow.label.free_node_limit_tip": "工作流中不允许有游离节点",
+  "workflow.label.handle_tooltip": "<b>点击</b> 去添加节点<br /><b>拖着</b> 去连接节点",
+  "workflow.label.ifelse_node_name": "IF/ELSE 判断",
+  "workflow.label.listener_node_desc": "根据监听实体对象的变化作为触发运行整个工作流程的条件，无需主动触发，起始节点为实体监听节点。",
+  "workflow.label.listener_node_name": "实体监听",
+  "workflow.label.logic_keyword_and": "AND",
+  "workflow.label.logic_keyword_else": "ELSE",
+  "workflow.label.logic_keyword_elseif": "ELIF",
+  "workflow.label.logic_keyword_if": "IF",
+  "workflow.label.logic_keyword_or": "OR",
+  "workflow.label.no_log_record": "无日志记录",
+  "workflow.label.node_category_action": "动作类",
+  "workflow.label.node_category_control": "控制类",
+  "workflow.label.node_category_entry": "入口",
+  "workflow.label.node_category_external": "外部类",
+  "workflow.label.node_email_type": "邮件类型",
+  "workflow.label.node_id": "节点 ID",
+  "workflow.label.node_min_number_limit_tip": "工作流中至少需要有 {1} 个节点。",
+  "workflow.label.parallel": "并行{1}",
+  "workflow.label.parallel_depth_limit_tip": "并行嵌套层数限制 {1} 层",
+  "workflow.label.parallel_limit_tip": "并行分支限制为 {1} 个",
+  "workflow.label.param_type_other": "其他",
+  "workflow.label.select_node_name": "实体选择",
+  "workflow.label.service_node_name": "服务调用",
+  "workflow.label.timer_node_desc": "基于定时或周期去作为触发整个工作流运行的条件，无需主动触发，起始节点是定时器节点。",
+  "workflow.label.timer_node_name": "定时器",
+  "workflow.label.trigger_node_desc": "需要由用户手动触发从而运行整个工作流，起始节点是一个触发器节点，当触发时允许设置输入参数。",
+  "workflow.label.trigger_node_name": "触发器",
+  "workflow.label.webhook_node_name": "Webhook 推送",
+  "workflow.message.delete_tip": "是否确认删除工作流？删除后无法恢复。",
+  "workflow.message.import_dsl_error": "DSL 文件包含错误。请更新文件并重试。",
+  "workflow.modal.add_workflow_modal": "创建工作流",
+  "workflow.modal.edit_workflow_modal": "编辑工作流",
+  "workflow.modal.entry_node_create_title": "您想创建哪种类型的起始节点？",
+  "workflow.modal.running_log": "运行日志",
+  "workflow.modal.upload_tips": "单击此处或将文件拖到此区域上传",
+  "workflow.modal.workflow_name": "工作流名称",
+  "workflow.node.config_panel_lable_arguments": "参数",
+  "workflow.node.input_variables": "输入变量",
+  "workflow.node.service_helper_text": "请先选择要请求的服务。",
+  "workflow.node.trigger_switch_label": "内容",
+  "workflow.valid.edge_id_duplicated": "边缘（连接节点 {1} 和 {2}）ID 重复。",
+  "workflow.valid.invalid_edge_id": "连接节点 {1} 和 {2} 的边缘 ID 无效。",
+  "workflow.valid.invalid_edge_type": "连接节点 {1} 和 {2} 的边缘类型无效。",
+  "workflow.valid.invalid_email": "{1} 字段值不是有效的电子邮件。",
+  "workflow.valid.invalid_node_id": "{1} 节点 ID 无效。",
+  "workflow.valid.invalid_node_type": "{1} 节点类型无效。",
+  "workflow.valid.invalid_timer_interval": "时间间隔必须小于 {1}。",
+  "workflow.valid.invalid_url": "{1} 字段值不是有效的 URL。",
+  "workflow.valid.max_length": "输入值的 {1} 字段长度不能超过 {2} 位数。",
+  "workflow.valid.min_length": "您输入值的 {1} 字段长度应大于或等于 {0}。",
+  "workflow.valid.node_id_duplicated": "{1} 和 {2} 节点 ID 重复。",
+  "workflow.valid.node_parameters_required": "需要 {1} 节点参数。",
+  "workflow.valid.parameter_required": "{1} 节点参数为必填项。",
+  "workflow.valid.range_length": "{1} 字段值的长度应大于或等于 {2}，小于或等于 {3}。",
+  "workflow.valid.required": "{1}字段为必填字段。"
 }
