--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -3,62 +3,107 @@
     "common.button.cancel": "取消",
     "common.button.confirm": "确认",
     "common.button.edit": "编辑",
+    "common.button.reset": "重置",
     "common.button.save": "保存",
     "common.document.title": "Beaver IoT",
+    "common.label.403_forbidden": "403 禁止",
     "common.label.add": "添加",
+    "common.label.back": "返回",
     "common.label.banned": "禁止",
+    "common.label.bulk_deletion": "批量删除",
+    "common.label.bulk_removal": "批量移除",
+    "common.label.by_device": "基于设备",
+    "common.label.choices": "待选择",
+    "common.label.chosen": "已选",
     "common.label.click_to_try_fix": "点击尝试修复",
     "common.label.close": "关闭",
     "common.label.confirm_password": "确认密码",
     "common.label.connect": "连接",
+    "common.label.content": "内容",
     "common.label.copy": "复制",
     "common.label.copy_error_info": "复制错误信息",
+    "common.label.create": "创建",
     "common.label.create_time": "创建时间",
+    "common.label.creator": "创建者",
     "common.label.dashboard": "仪表板",
     "common.label.data_type": "数据类型",
     "common.label.day": "{1} 天",
     "common.label.days": "{1} 天",
     "common.label.delete": "删除",
+    "common.label.deletion": "删除",
     "common.label.detail": "详情",
     "common.label.device": "设备",
     "common.label.edit_title": "编辑{1}",
+    "common.label.editor": "编辑器",
     "common.label.email": "电子邮件",
     "common.label.empty": "无数据",
+    "common.label.enable_status": "启用状态",
     "common.label.enable_title": "启用{1}",
     "common.label.entity": "实体",
+    "common.label.error": "错误",
+    "common.label.export": "导出",
+    "common.label.false": "False",
     "common.label.hour": "{1} 小时",
     "common.label.hours": "{1} 小时",
     "common.label.image": "图片",
     "common.label.import": "导入",
+    "common.label.input": "输入",
     "common.label.integration": "集成",
     "common.label.json": "JSON",
     "common.label.key": "键",
+    "common.label.label": "标签",
+    "common.label.language": "语言",
     "common.label.last_modified_time": "最后更新时间",
+    "common.label.log": "日志",
     "common.label.login": "登录",
     "common.label.max": "最大",
     "common.label.min": "最小",
+    "common.label.minutes": "{1} 分钟",
     "common.label.more": "更多",
+    "common.label.ms": "ms",
     "common.label.name": "名称",
+    "common.label.no_device_entity": "无设备归属实体",
+    "common.label.no_permissions": "无权限",
     "common.label.on": "开",
     "common.label.openapi": "OpenAPI",
     "common.label.operation": "操作",
+    "common.label.output": "输出",
+    "common.label.page_not_permission": "您没有访问权限，请联系管理员处理。",
     "common.label.password": "密码",
     "common.label.readonly": "只读",
     "common.label.register": "注册",
+    "common.label.remark": "备注",
+    "common.label.removal": "移除",
+    "common.label.remove": "移除",
+    "common.label.rename": "重命名",
+    "common.label.run": "运行",
     "common.label.search": "搜索",
     "common.label.second": "{1} 秒",
     "common.label.seconds": "{1} 秒",
+    "common.label.selected": "选中",
     "common.label.service": "服务",
     "common.label.setting": "设置",
+    "common.label.sign_out": "登出",
+    "common.label.sort_type_newest_to_oldest": "最新至最早",
+    "common.label.sort_type_oldest_to_newest": "最早至最新",
+    "common.label.success": "成功",
     "common.label.table_disabled_status": "禁用状态",
+    "common.label.target": "目标",
+    "common.label.test": "测试",
     "common.label.time": "时间",
+    "common.label.tip": "提示",
     "common.label.title": "标题",
+    "common.label.true": "True",
     "common.label.type": "类型",
+    "common.label.unit": "单位",
+    "common.label.update_time": "更新时间",
     "common.label.url": "URL",
     "common.label.username": "用户名",
     "common.label.value": "值",
     "common.label.version": "版本",
     "common.label.webhook": "Webhook",
+    "common.label.week": "星期",
+    "common.label.workflow": "工作流",
     "common.label.writable": "可写\n",
     "common.language.cn": "中文",
     "common.language.cn_short": "ZH",
@@ -68,9 +113,11 @@
     "common.message.copy_successful": "复制成功。",
     "common.message.delete_success": "删除成功。",
     "common.message.error_user_business_details_not_exist": "用户无商务参数",
+    "common.message.json_format_error": "JSON格式错误",
     "common.message.no_results_found": "未找到结果。",
     "common.message.operation_success": "操作成功。",
     "common.message.register_helper_text": "欢迎！让我们开始创建一个用户账户。",
+    "common.message.remove_success": "移除成功",
     "common.message.something_wrong_title": "出错了",
     "common.modal.desc_leave_current_page": "您所调整的内容不会保存，是否确认离开此页面？",
     "common.modal.title_leave_current_page": "离开当前页面",
@@ -147,7 +194,7 @@
     "valid.input.string_rules_two": "仅允许大写字母、小写字母、数字和!\"#$%&'()*+,-./:;<=>@[]^_`{|}~。",
     "valid.input.two_sixteen_hexadecimal": "请输入两个16位十六进制值，用“-”分隔。",
     "valid.input.url": "请输入有效的URL。",
-    "valid.input.username": "用户名必须包含大小写字母。",
+    "valid.input.username": "用户名长度最小长度为5。",
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
     "valid.resp.at_least_one": "请至少选择一个{1}。"
