--- a/packages/locales/src/lang/en/entity.json
+++ b/packages/locales/src/lang/en/entity.json
@@ -1,25 +1,24 @@
 {
-    "entity.label.create_property": "Create Property",
-    "entity.label.create_entity_only": "Create Entity Only",
-    "entity.label.create_service": "Create Service",
     "entity.label.create_entity_from_workflow": "Create from Workflow",
-    "entity.label.entity_type_of_access": "Type Of Access",
-    "entity.label.entity_maximum_value": "Maximum Value",
-    "entity.label.entity_minimum_value": "Minimum Value",
-    "entity.label.entity_maximum_length": "Maximum Length",
-    "entity.label.entity_minimum_length": "Minimum length",
-    "entity.label.entity_items": "Items",
-    "entity.label.value_source": "Value Source",
+    "entity.label.create_entity_only": "Create Entity Only",
+    "entity.label.create_property": "Create Property",
+    "entity.label.create_service": "Create Service",
     "entity.label.custom_entity": "Custom Entity",
-    "entity.label.historical_data": "Historical Data",
-    "common.button.reset": "Reset",
-    "entity.label.entity_type_of_access_readonly": "R",
+    "entity.label.entity_items": "Items",
+    "entity.label.entity_maximum_length": "Maximum Length",
+    "entity.label.entity_maximum_value": "Maximum Value",
+    "entity.label.entity_minimum_length": "Minimum Length",
+    "entity.label.entity_minimum_value": "Minimum Value",
+    "entity.label.entity_type_of_access": "Type of Access",
     "entity.label.entity_type_of_access_read_and_write": "RW",
+    "entity.label.entity_type_of_access_readonly": "R",
     "entity.label.entity_type_of_access_write": "W",
-    "entity.label.entity_type_of_string": "STRING",
-    "entity.label.entity_type_of_long": "LONG",
     "entity.label.entity_type_of_boolean": "BOOLEAN",
     "entity.label.entity_type_of_double": "DOUBLE",
+    "entity.label.entity_type_of_long": "LONG",
+    "entity.label.entity_type_of_string": "STRING",
+    "entity.label.historical_data": "Historical Data",
     "entity.label.set_enumeration_items": "Set Enumeration Items",
-    "entity.label.set_value": "Set Value"
+    "entity.label.set_value": "Set Value",
+    "entity.label.value_source": "Value Source"
 }
