--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -5,17 +5,17 @@
     "error.http.data_no_found": "Data not found",
     "error.http.forbidden_permission": "No access rights, and access is prohibited.",
     "error.http.method_not_allowed": "Disallowed Http Methods",
+    "error.http.name_repeated": "Repetition of names",
     "error.http.network_timeout": "Network connection timeout.",
     "error.http.page_not_found": "Sorry, the page you visited does not exist.",
     "error.http.parameter_syntax_error": "Parameter syntax error",
     "error.http.parameter_validation_failed": "Parameter validation failed",
     "error.http.request_too_frequently": "Request too frequently",
+    "error.http.role_does_not_exit": "Role does not exist",
+    "error.http.role_still_has_user": "Please remove the user under the role first, and then delete the role.",
     "error.http.server_error": "Request error, please check and try again.",
     "error.http.token_invalid": "The token is invalid, please try again.",
     "error.http.token_not_found": "Your account hasn't been signed in.",
-    "error.http.user_register_email_exist": "This User Register Email Already Exists.",
-    "error.http.role_does_not_exit": "Role does not exist.",
-    "error.http.name_repeated": "Name is repeated",
-    "error.http.user_has_no_permission": "User has no permission.",
-    "error.http.role_still_has_user": "Please remove the user under the role first, and then delete the role."
+    "error.http.user_has_no_permission": "Current user has no privileges",
+    "error.http.user_register_email_exist": "This User Register Email Already Exists."
 }
