--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -3,63 +3,108 @@
     "common.button.cancel": "Cancel",
     "common.button.confirm": "Confirm",
     "common.button.edit": "Edit",
+    "common.button.reset": "Reset",
     "common.button.save": "Save",
     "common.document.title": "Beaver IoT",
+    "common.label.403_forbidden": "403 Forbidden",
     "common.label.add": "Add",
+    "common.label.back": "Back",
     "common.label.banned": "Banned",
+    "common.label.bulk_deletion": "Bulk Deletion",
+    "common.label.bulk_removal": "Bulk Removal",
+    "common.label.by_device": "By Device",
+    "common.label.choices": "To Be Selected",
+    "common.label.chosen": "Selected",
     "common.label.click_to_try_fix": "Click to try to fix",
     "common.label.close": "Close",
     "common.label.confirm_password": "Confirm Password",
     "common.label.connect": "Connect",
+    "common.label.content": "Content",
     "common.label.copy": "Copy",
     "common.label.copy_error_info": "Copying Error Messages",
+    "common.label.create": "Create",
     "common.label.create_time": "Create Time",
+    "common.label.creator": "Creator",
     "common.label.dashboard": "Dashboard",
     "common.label.data_type": "Data Type",
     "common.label.day": "{1} Day",
     "common.label.days": "{1} Days",
     "common.label.delete": "Delete",
+    "common.label.deletion": "Deletion",
     "common.label.detail": "Detail",
     "common.label.device": "Device",
     "common.label.edit_title": "Edit {1}",
+    "common.label.editor": "Editor",
     "common.label.email": "Email",
     "common.label.empty": "No Data",
+    "common.label.enable_status": "Enable Status",
     "common.label.enable_title": "Enable {1}",
     "common.label.entity": "Entity",
+    "common.label.error": "Error",
+    "common.label.export": "Export",
+    "common.label.false": "False",
     "common.label.hour": "{1} Hour",
     "common.label.hours": "{1} Hours",
     "common.label.image": "Image",
     "common.label.import": "Import",
+    "common.label.input": "Input",
     "common.label.integration": "Integration",
     "common.label.json": "JSON",
     "common.label.key": "Key",
+    "common.label.label": "Label",
+    "common.label.language": "Language",
     "common.label.last_modified_time": "Last Updated Time",
+    "common.label.log": "Log",
     "common.label.login": "Login",
     "common.label.max": "Max.",
     "common.label.min": "Min.",
+    "common.label.minutes": "{1} Minutes",
     "common.label.more": "More",
+    "common.label.ms": "ms",
     "common.label.name": "Name",
+    "common.label.no_device_entity": "Entities with No Device",
+    "common.label.no_permissions": "No Permissions",
     "common.label.on": "ON",
     "common.label.openapi": "OpenAPI",
     "common.label.operation": "Operation",
+    "common.label.output": "Output",
+    "common.label.page_not_permission": "Access denied. Please reach out to the administrator.",
     "common.label.password": "Password",
     "common.label.property": "Property",
     "common.label.readonly": "Read only",
     "common.label.register": "Register",
+    "common.label.remark": "Remark",
+    "common.label.removal": "Removal",
+    "common.label.remove": "Remove",
+    "common.label.rename": "Rename",
+    "common.label.run": "Run",
     "common.label.search": "Search",
     "common.label.second": "{1} Second",
     "common.label.seconds": "{1} Seconds",
+    "common.label.selected": "Selected",
     "common.label.service": "Service",
     "common.label.setting": "Setting",
+    "common.label.sign_out": "Sign Out",
+    "common.label.sort_type_newest_to_oldest": "Newest to Oldest",
+    "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
+    "common.label.success": "Success",
     "common.label.table_disabled_status": "Disabled status",
+    "common.label.target": "Target",
+    "common.label.test": "Test",
     "common.label.time": "Time",
+    "common.label.tip": "Tip",
     "common.label.title": "Title",
+    "common.label.true": "True",
     "common.label.type": "Type",
+    "common.label.unit": "Unit",
+    "common.label.update_time": "Update Time",
     "common.label.url": "URL",
     "common.label.username": "Username",
     "common.label.value": "Value",
     "common.label.version": "Version",
     "common.label.webhook": "Webhook",
+    "common.label.week": "Week",
+    "common.label.workflow": "Workflow",
     "common.label.writable": "Writable",
     "common.language.cn": "Chinese",
     "common.language.cn_short": "ZH",
@@ -69,9 +114,11 @@
     "common.message.copy_successful": "Copied successfully.",
     "common.message.delete_success": "Deleted successfully.",
     "common.message.error_user_business_details_not_exist": "User has no business parameters",
+    "common.message.json_format_error": "JSON Formatting Error",
     "common.message.no_results_found": "No Results found.",
     "common.message.operation_success": "Operation successfully.",
     "common.message.register_helper_text": "Welcome！Let's get started by creating a user account.",
+    "common.message.remove_success": "Removed successfully.",
     "common.message.something_wrong_title": "Something went wrong",
     "common.modal.desc_leave_current_page": "Changes you made may not be saved. Are you sure you want to leave this page?",
     "common.modal.title_leave_current_page": "Leave the current page",
@@ -148,55 +195,8 @@
     "valid.input.string_rules_two": "Only uppercase letters, lowercase letters, numbers and !\"#$%&'()*+,-./:;<=>@[]^_`{|}~ are allowed.",
     "valid.input.two_sixteen_hexadecimal": "Please enter two 16-bit hexadecimal values, separated by “-” for the range.",
     "valid.input.url": "Please enter a valid URL.",
-    "valid.input.username": "The username must include both upper and lower case letters.",
+    "valid.input.username": "Minimum username length is 5.",
     "valid.input.value": "Input value: {0} only.",
     "valid.input.version": "The version number does not comply with the specification.",
-    "valid.resp.at_least_one": "Please select at least one {1}.",
-    "common.label.create": "Create",
-    "common.label.export": "Export",
-    "common.label.update_time": "Update Time",
-    "common.label.label": "Label",
-    "common.label.workflow": "Workflow",
-    "common.label.editor": "Editor",
-    "common.label.remark": "Remark",
-    "common.label.enable_status": "Enable Status",
-    "common.label.back": "Back",
-    "common.label.test": "Test",
-    "common.label.run": "Run",
-    "common.label.target": "Target",
-    "common.label.ms": "ms",
-    "common.label.week": "Week",
-    "common.label.content": "Content",
-    "common.label.input": "Input",
-    "common.label.output": "Output",
-    "common.message.json_format_error": "JSON 格式错误",
-    "common.label.tip": "Tip",
-    "common.label.by_device": "By device",
-    "common.label.error": "Error",
-    "common.label.success": "Success",
-    "common.label.log": "Log",
-    "common.label.no_device_entity": "Entities with no device",
-    "common.label.page_not_permission": "You do not have access rights, Please contact the administrator to deal with.",
-    "common.label.rename": "Rename",
-    "common.label.remove": "Remove",
-    "common.label.removal": "Removal",
-    "common.message.remove_success": "Remove successfully.",
-    "common.label.bulk_removal": "Bulk Removal",
-    "common.label.choices": "Choices",
-    "common.label.chosen": "Chosen",
-    "common.label.selected": "selected",
-    "common.label.sort_type_newest_to_oldest": "Newest to oldest",
-    "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
-    "common.label.deletion": "Deletion",
-    "common.label.bulk_deletion": "Bulk Deletion",
-    "common.label.creator": "Creator",
-    "common.label.403_forbidden": "403 Forbidden",
-    "common.label.no_permissions": "No Permissions!",
-    "common.label.sign_out": "Sign out",
-    "common.label.true": "True",
-    "common.label.false": "False",
-    "common.label.language": "Language",
-    "common.label.refresh": "Refresh",
-    "common.label.minutes": "{1} Minutes",
-    "common.label.unit": "Unit"
+    "valid.resp.at_least_one": "Please select at least one {1}."
 }
