--- a/packages/locales/src/lang/cn/error.json
+++ b/packages/locales/src/lang/cn/error.json
@@ -5,13 +5,17 @@
     "error.http.data_no_found": "数据未找到",
     "error.http.forbidden_permission": "没有访问权限，访问被禁止。",
     "error.http.method_not_allowed": "不允许的HTTP方法",
+    "error.http.name_repeated": "名称重复",
     "error.http.network_timeout": "网络连接超时。",
     "error.http.page_not_found": "抱歉，您访问的页面不存在。",
     "error.http.parameter_syntax_error": "参数语法错误",
     "error.http.parameter_validation_failed": "参数验证失败",
     "error.http.request_too_frequently": "请求过于频繁",
+    "error.http.role_does_not_exit": "角色不存在",
+    "error.http.role_still_has_user": "请先删除角色下的用户，再删除角色。",
     "error.http.server_error": "请求错误，请检查并重试。",
     "error.http.token_invalid": "令牌无效，请重试。",
     "error.http.token_not_found": "您的账户尚未登录。",
+    "error.http.user_has_no_permission": "当前用户无权限",
     "error.http.user_register_email_exist": "用户注册邮箱已存在。"
 }
