--- a/packages/locales/src/lang/en/user.json
+++ b/packages/locales/src/lang/en/user.json
@@ -1,42 +1,42 @@
 {
+    "user.label.add_new_user_modal_title": "Add New User",
+    "user.label.add_role": "Create a Role",
+    "user.label.bulk_delete_tip": "Deletion cannot be undone. Are you sure you want to delete these {0} users in bulk？",
+    "user.label.edit_user_modal_title": "Edit User",
+    "user.label.rename_role": "Rename the Role",
+    "user.label.reset_password": "Reset Password",
+    "user.label.role_table_title": "Role",
+    "user.label.single_delete_tip": "Deletion cannot be undone. Are you sure you want to delete user: {0}?",
+    "user.label.user_name_table_title": "User Name",
     "user.label.user_role": "Users and Roles",
-    "user.role.users_tab_name": "Users",
-    "user.role.roles_tab_name": "Roles",
-    "user.message.not_data_roles_tip": "Not data, please add a role first.",
-    "user.label.add_role": "Add role",
-    "user.label.rename_role": "Rename role",
-    "user.role.members_tab_title": "Members",
-    "user.role.functions_tab_title": "Functions",
-    "user.role.resources_tab_title": "Resources",
-    "user.role.single_member_remove_tip": "Are you sure you to remove member: {0}?",
-    "user.role.bulk_member_remove_tip": "Are you sure to remove these {0} members in bulk?",
+    "user.message.not_data_roles_tip": "Not data, please create a role first.",
     "user.role.add_user_member_modal_title": "Add Member",
-    "user.role.delete_tip": "Deletion cannot be restored. Are you sure to delete role: {0}?",
-    "user.role.model_table_title": "Model",
-    "user.role.page_table_title": "Page",
-    "user.role.function_table_title": "Function",
-    "user.role.resource_integration_tab_title": "Integration Permission",
-    "user.role.resource_device_tab_title": "Device Permission",
-    "user.role.resource_dashboard_tab_title": "Dashboard Permission",
+    "user.role.bulk_dashboard_remove_tip": "Are you sure you want to remove these {0} dashboards in bulk？",
+    "user.role.bulk_device_remove_tip": "Are you sure you want to remove these {0} devices in bulk？",
+    "user.role.bulk_integration_remove_tip": "After removal, all devices under these integrations and independent entities will no longer be accessible. Are you sure you want to remove these {0} integrations in bulk？",
+    "user.role.bulk_member_remove_tip": "Are you sure you want to remove these {0} members in bulk?",
+    "user.role.dashboard_permission_modal_title": "Add Dashboard Permission",
+    "user.role.delete_tip": "Deletion cannot be undone. Are you sure you want to delete role: {0}?",
+    "user.role.device_can_not_remove_tip": "Cannot be removed. The source integration has been selected. Please deselect it first.",
+    "user.role.device_permission_modal_title": "Add Device Permission",
+    "user.role.function_table_title": "Permission",
+    "user.role.functions_tab_title": "Permission",
     "user.role.integration_name_table_title": "Integration Name",
     "user.role.integration_num_device_table_title": "Number of Devices",
     "user.role.integration_num_entity_table_title": "Number of Entities",
+    "user.role.integration_permission_add_tip": "Adding the integration will allow access to all devices under this integration as well as entity data independent of the devices.",
     "user.role.integration_permission_modal_title": "Add Integration Permission",
-    "user.role.integration_permission_add_tip": "添加集成后将允许访问该集成下的所有设备和独立设备外的实体数据。",
-    "user.role.single_integration_remove_tip": "After removal, access to all devices under the integration and independent entities will no longer be allowed. Are you sure to remove integration: {0}?",
-    "user.role.bulk_integration_remove_tip": "After removal, access to all devices under these integrations and independent entities will no longer be allowed. Are you sure to remove these {0} integrations in bulk？",
-    "user.role.device_permission_modal_title": "Add Device Permission",
-    "user.role.single_device_remove_tip": "Are you sure to remove device: {0}?",
-    "user.role.bulk_device_remove_tip": "Are you sure to remove these {0} devices in bulk？",
-    "user.role.device_can_not_remove_tip": "Unable to remove, source integration is checked, please uncheck source integration first.",
-    "user.role.dashboard_permission_modal_title": "Add Dashboard Permission",
-    "user.role.single_dashboard_remove_tip": "Are you sure to remove dashboard: {0}?",
-    "user.role.bulk_dashboard_remove_tip": "Are you sure to remove these {0} dashboards in bulk？",
-    "user.label.user_name_table_title": "User Name",
-    "user.label.role_table_title": "Role",
-    "user.label.reset_password": "Reset Password",
-    "user.label.single_delete_tip": "Deletion cannot be restored. Are you sure to delete user: {0}?",
-    "user.label.bulk_delete_tip": "Deletion cannot be restored. Are you sure to delete these {0} users in bulk？",
-    "user.label.add_new_user_modal_title": "Add New User",
-    "user.label.edit_user_modal_title": "Edit User"
+    "user.role.members_tab_title": "Members",
+    "user.role.model_table_title": "Model",
+    "user.role.page_table_title": "Page",
+    "user.role.resource_dashboard_tab_title": "Dashboard Permission",
+    "user.role.resource_device_tab_title": "Device Permission",
+    "user.role.resource_integration_tab_title": "Integration Permission",
+    "user.role.resources_tab_title": "Resources",
+    "user.role.roles_tab_name": "Roles",
+    "user.role.single_dashboard_remove_tip": "Are you sure you want to remove dashboard: {0}?",
+    "user.role.single_device_remove_tip": "Are you sure you want to remove device: {0}?",
+    "user.role.single_integration_remove_tip": "After removal, all devices under the integration and independent entities will no longer be accessible. Are you sure you want to remove integration: {0}?",
+    "user.role.single_member_remove_tip": "Are you sure you want to remove member: {0}?",
+    "user.role.users_tab_name": "Users"
 }
