--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -1,122 +1,122 @@
 {
     "workflow.button.label_import_from_dsl": "Import from DSL",
-    "workflow.label.trigger_node_name": "Trigger",
-    "workflow.label.trigger_node_desc": "It needs to be triggered by the user to run the whole workflow, the starting node is a Trigger node, and input parameters are allowed to be set when triggering.",
-    "workflow.label.select_node_name": "Entity Select",
-    "workflow.label.ifelse_node_name": "IF/ELSE",
-    "workflow.label.assigner_node_name": "Entity Assigner",
-    "workflow.label.timer_node_name": "Timer",
-    "workflow.label.timer_node_desc": "Based on the scheduled time or cycle as a trigger to run the entire workflow conditions, without the need for active triggering, the starting node is the Timer node.",
-    "workflow.label.listener_node_name": "Entity Listener",
-    "workflow.label.listener_node_desc": "Based on the listening entity object changes as a trigger to run the entire workflow conditions, without the need for active triggering, the starting node for the Entity Listening node.",
-    "workflow.label.code_node_name": "Code",
-    "workflow.label.service_node_name": "Service Invocation",
-    "workflow.label.email_node_name": "Email Notify",
-    "workflow.label.webhook_node_name": "Webhook Push",
-    "workflow.label.handle_tooltip": "<b>Click</b> to add Node<br /><b>Drag</b> to connect",
     "workflow.context_menu.title_change_node": "Change Node",
-    "workflow.label.node_category_entry": "Entry",
-    "workflow.label.node_category_control": "Control",
-    "workflow.label.node_category_action": "Action",
-    "workflow.label.node_category_external": "External",
-    "workflow.label.parallel_depth_limit_tip": "并行嵌套层数限制 {1} 层",
-    "workflow.modal.entry_node_create_title": "What type of starting Node do you want to create?",
-    "workflow.modal.add_workflow_modal": "Add Workflow",
-    "workflow.modal.edit_workflow_modal": "Edit Workflow",
-    "workflow.modal.workflow_name": "Workflow Name",
-    "workflow.modal.running_log": "Running Log",
-    "workflow.label.design_mode_canvas_name": "Canvas Mode",
-    "workflow.label.design_mode_advanced_name": "Advances Mode",
-    "workflow.modal.upload_tips": "Click here or drag file to this area to upload",
-    "workflow.editor.logs_popover_title_test": "Test Logs",
-    "workflow.editor.logs_popover_title_run": "Run Logs",
-    "workflow.editor.log_title_test": "Test Log",
-    "workflow.editor.log_title_run": "Run Log",
-    "workflow.editor.log_panel_title_test_run": "Test Run",
-    "workflow.editor.log_panel_title_verification_result": "Verification Result",
-    "workflow.editor.save_warning_message": "The current workflow has been referenced, and saving it will update the workflow information synchronously. Are you sure you want to save it",
-    "workflow.message.delete_tip": "Are you sure you want to delete the workflow? It cannot be restore after deletion.",
-    "workflow.editor.form_param_select_placeholder": "Enter or reference a variable",
-    "workflow.label.branch": "BRANCH{1}",
-    "workflow.label.parallel": "PARALLEL{1}",
-    "workflow.label.no_log_record": "No log is recorded",
-    "workflow.node.trigger_switch_label": "Context",
-    "workflow.editor.form_param_timer_type": "Timer Type",
-    "workflow.editor.form_param_execution_time_queue": "Execution Time Queue",
+    "workflow.editor.config_panel_test_title": "Test {1}",
+    "workflow.editor.editor_auto_create_service_entity_tip": "The system will automatically create a custom service entity based on the workflow name. You can view this entity in the custom entity list.",
+    "workflow.editor.form_button_add_condition": "Add Condition",
+    "workflow.editor.form_logic_operator_switch_tip": "Click to switch to <b>{1}</b>",
     "workflow.editor.form_param_execution_time": "Execution Time",
-    "workflow.editor.form_param_expire_time": "Expire Time",
-    "workflow.editor.form_param_timer_type_once": "Single Execution",
-    "workflow.editor.form_param_timer_type_cycle": "Cycle Execution",
-    "workflow.editor.form_param_timer_period_monday": "Monday",
-    "workflow.editor.form_param_timer_period_tuesday": "Tuesday",
-    "workflow.editor.form_param_timer_period_wednesday": "Wednesday",
-    "workflow.editor.form_param_timer_period_thursday": "Thursday",
+    "workflow.editor.form_param_execution_time_queue": "Execution Time Queue",
+    "workflow.editor.form_param_expire_time": "Expiration Time",
+    "workflow.editor.form_param_select_placeholder": "Enter or reference a variable",
     "workflow.editor.form_param_timer_period_friday": "Friday",
+    "workflow.editor.form_param_timer_period_monday": "Monday",
     "workflow.editor.form_param_timer_period_saturday": "Saturday",
     "workflow.editor.form_param_timer_period_sunday": "Sunday",
-    "workflow.label.parallel_limit_tip": "并行分支限制为 {1} 个",
-    "workflow.label.entry_node_number_limit_tip": "工作流中必须且仅允许有 {1} 个入口节点",
-    "workflow.label.node_email_type": "Email Type",
-    "workflow.label.logic_keyword_if": "IF",
-    "workflow.label.logic_keyword_else": "ELSE",
-    "workflow.label.logic_keyword_elseif": "ELIF",
-    "workflow.label.logic_keyword_and": "AND",
-    "workflow.label.logic_keyword_or": "OR",
-    "workflow.editor.form_button_add_condition": "Add Condition",
-    "workflow.label.free_node_limit_tip": "工作流中不允许有游离节点",
-    "workflow.label.condition_operator_contains": "Contains",
-    "workflow.label.condition_operator_not_contains": "Not Contains",
-    "workflow.label.condition_operator_start_with": "Start With",
-    "workflow.label.condition_operator_end_with": "End With",
-    "workflow.label.condition_operator_is": "Is",
-    "workflow.label.condition_operator_is_not": "Is Not",
-    "workflow.label.condition_operator_is_empty": "Is Empty",
-    "workflow.label.condition_operator_is_not_empty": "Is Not Empty",
-    "workflow.node.config_panel_lable_arguments": "Arguments",
-    "workflow.message.import_dsl_error": "The DSL file contains errors. Please update the file and try again.",
+    "workflow.editor.form_param_timer_period_thursday": "Thursday",
+    "workflow.editor.form_param_timer_period_tuesday": "Tuesday",
+    "workflow.editor.form_param_timer_period_wednesday": "Wednesday",
+    "workflow.editor.form_param_timer_type": "Timer Types",
+    "workflow.editor.form_param_timer_type_cycle": "Cycle Execution",
+    "workflow.editor.form_param_timer_type_interval": "Interval Execution",
+    "workflow.editor.form_param_timer_type_once": "Single Execution",
+    "workflow.editor.log_panel_title_test_run": "Test Run",
+    "workflow.editor.log_panel_title_verification_result": "Verification Result",
+    "workflow.editor.log_title_run": "Runnng Logs",
+    "workflow.editor.log_title_test": "Test Logs",
+    "workflow.editor.logs_popover_title_run": "Running Logs",
+    "workflow.editor.logs_popover_title_test": "Test Logs",
+    "workflow.editor.node_delete_confirm_desc": "Are you sure you want to delete this node?",
+    "workflow.editor.node_delete_confirm_title": "Delete Nodes",
+    "workflow.editor.node_test_tip": "Test this Node",
+    "workflow.editor.save_warning_message": "The current workflow has been referenced. Saving will update the workflow information synchronously. Are you sure you want to save it?",
+    "workflow.editor.valid.condition_not_setup": "Condition Not Setup",
+    "workflow.email.content_modal_title": "Edit Email Content",
+    "workflow.email.label_content_recipients": "Recipients",
+    "workflow.email.label_content_recipients_tip": "Use ';' to separate multiple recipients.",
     "workflow.email.label_gmail_config_api_key": "SerpApi Api Key",
-    "workflow.email.label_smtp_config_service_host": "SMTP Service Path",
-    "workflow.email.label_smtp_config_service_port": "SMTP Port",
-    "workflow.email.label_smtp_config_username": "SMTP Username",
-    "workflow.email.label_smtp_config_password": "SMTP Password",
     "workflow.email.label_smtp_config_encryption_method": "Encryption Method",
     "workflow.email.label_smtp_config_encryption_none": "None",
     "workflow.email.label_smtp_config_encryption_start_tls": "StartTLS",
     "workflow.email.label_smtp_config_encryption_tls": "TLS",
-    "workflow.email.content_modal_title": "Edit Email Content",
-    "workflow.editor.valid.condition_not_setup": "Condition not setup",
-    "workflow.label.node_id": "Node ID",
-    "workflow.label.abnormal_edge_tip": "节点嵌套错误，请检查重试",
-    "workflow.editor.node_delete_confirm_title": "删除节点",
-    "workflow.editor.node_delete_confirm_desc": "确定删除此节点？",
-    "workflow.email.label_content_recipients": "Recipients",
-    "workflow.email.label_content_recipients_tip": "Multiple recipients need to use ';' separate",
-    "workflow.editor.form_logic_operator_switch_tip": "Click to switch to <b>{1}</b>",
-    "workflow.editor.editor_auto_create_service_entity_tip": "系统会自动根据工作流名称创建一个自定义服务实体，你可以在自定义实体列表中查看该实体。",
-    "workflow.label.node_min_number_limit_tip": "工作流中至少需要有 {1} 个节点",
-    "workflow.valid.required": "The {1} field is required.",
-    "workflow.valid.range_length": "The length of the {1} field value should be greater than or equal to {2} and less than or equal to {3}.",
-    "workflow.valid.node_parameters_required": "The {1} node parameters is required.",
-    "workflow.valid.min_length": "The {1} field length of the value you entered should be more than or equal to {0}.",
-    "workflow.valid.max_length": "The {1} field length of the value you entered cannot exceed {2} digits.",
-    "workflow.valid.parameter_required": "The {1} Node parameter is required.",
-    "workflow.valid.invalid_node_id": "The {1} Node ID is invalid.",
-    "workflow.valid.invalid_edge_id": "The Edge (connecting node {1} and {2}) ID is invalid.",
-    "workflow.valid.invalid_node_type": "The {1} Node type is invalid.",
-    "workflow.valid.invalid_edge_type": "The Edge (connecting node {1} and {2}) Type is invalid.",
-    "workflow.valid.node_id_duplicated": "{1} and {2} Node ID is duplicated.",
-    "workflow.valid.edge_id_duplicated": "The Edge (connecting node {1} and {2}) ID is duplicated.",
-    "workflow.node.service_helper_text": "Please select the service you want to call first.",
-    "workflow.node.input_variables": "Input Variables",
-    "workflow.editor.config_panel_test_title": "Test {1}",
-    "workflow.valid.invalid_url": "The {1} field value is not a valid URL.",
-    "workflow.valid.invalid_email": "The {1} field value is not a valid email.",
-    "workflow.editor.node_test_tip": "Test this Node",
+    "workflow.email.label_smtp_config_password": "SMTP Password",
+    "workflow.email.label_smtp_config_service_host": "SMTP Service Path",
+    "workflow.email.label_smtp_config_service_port": "SMTP Port",
+    "workflow.email.label_smtp_config_username": "SMTP Username",
+    "workflow.label.abnormal_edge_tip": "Node nesting error, please check and retry.",
+    "workflow.label.assigner_node_name": "Entity Assigner",
+    "workflow.label.branch": "BRANCH{1}",
+    "workflow.label.code_node_name": "Code",
+    "workflow.label.condition_operator_contains": "Contains",
+    "workflow.label.condition_operator_end_with": "End With",
     "workflow.label.condition_operator_greater_than": "Greater Than",
-    "workflow.label.condition_operator_greater_than_or_equal": "Greater Equals",
+    "workflow.label.condition_operator_greater_than_or_equal": "Greater Than or Equal To",
+    "workflow.label.condition_operator_is": "Is",
+    "workflow.label.condition_operator_is_empty": "Is Empty",
+    "workflow.label.condition_operator_is_not": "Is Not",
+    "workflow.label.condition_operator_is_not_empty": "Is Not Empty",
     "workflow.label.condition_operator_less_than": "Less Than",
-    "workflow.label.condition_operator_less_than_or_equal": "Less Equals",
+    "workflow.label.condition_operator_less_than_or_equal": "Less Than or Equal To",
+    "workflow.label.condition_operator_not_contains": "Not Contains",
+    "workflow.label.condition_operator_start_with": "Start With",
+    "workflow.label.design_mode_advanced_name": "Advanced Model",
+    "workflow.label.design_mode_canvas_name": "Canvas Mode",
+    "workflow.label.email_node_name": "Email Notification",
+    "workflow.label.entry_node_number_limit_tip": "The workflow must have exactly {1} entry node and no more",
+    "workflow.label.free_node_limit_tip": "No stray nodes allowed in the workflow",
+    "workflow.label.handle_tooltip": "<b>Click</b> to add Node<br /><b>Drag</b> to connect",
+    "workflow.label.ifelse_node_name": "IF/ELSE",
+    "workflow.label.listener_node_desc": "The workflow is conditionally triggered by changes in the monitored entity object, without the need for active triggering. The initial node is an entity listener node.",
+    "workflow.label.listener_node_name": "Entity Listener",
+    "workflow.label.logic_keyword_and": "AND",
+    "workflow.label.logic_keyword_else": "ELSE",
+    "workflow.label.logic_keyword_elseif": "ELIF",
+    "workflow.label.logic_keyword_if": "IF",
+    "workflow.label.logic_keyword_or": "OR",
+    "workflow.label.no_log_record": "No log is recorded",
+    "workflow.label.node_category_action": "Action",
+    "workflow.label.node_category_control": "Control",
+    "workflow.label.node_category_entry": "Entry",
+    "workflow.label.node_category_external": "External",
+    "workflow.label.node_email_type": "Email Types",
+    "workflow.label.node_id": "Node ID",
+    "workflow.label.node_min_number_limit_tip": "The workflow must contain at least {1} node.",
+    "workflow.label.parallel": "PARALLEL{1}",
+    "workflow.label.parallel_depth_limit_tip": "Parallel Nesting Limited to {1} Level",
+    "workflow.label.parallel_limit_tip": "Parallel Branches Limited to {1}",
     "workflow.label.param_type_other": "OTHER",
-    "workflow.editor.form_param_timer_type_interval": "Interval Execution",
-    "workflow.valid.invalid_timer_interval": "The timer interval must be less than {1}."
+    "workflow.label.select_node_name": "Entity Selection",
+    "workflow.label.service_node_name": "Service Invocation",
+    "workflow.label.timer_node_desc": "Workflow is triggered based on the scheduled time or cycle, without the need for active triggering. The starting node is a timer node.",
+    "workflow.label.timer_node_name": "Timer",
+    "workflow.label.trigger_node_desc": "The entire workflow needs to be manually triggered by the user. The starting node is a trigger node that allows input parameters to be set when triggered.",
+    "workflow.label.trigger_node_name": "Trigger",
+    "workflow.label.webhook_node_name": "Webhook Push",
+    "workflow.message.delete_tip": "Are you sure you want to delete the workflow? It cannot be restore after deletion.",
+    "workflow.message.import_dsl_error": "The DSL file contains errors. Please update the file and try again.",
+    "workflow.modal.add_workflow_modal": "Create Workflow",
+    "workflow.modal.edit_workflow_modal": "Edit Workflow",
+    "workflow.modal.entry_node_create_title": "What type of starting node do you want to create?",
+    "workflow.modal.running_log": "Running Log",
+    "workflow.modal.upload_tips": "Click here or drag files to this area to upload",
+    "workflow.modal.workflow_name": "Workflow Name",
+    "workflow.node.config_panel_lable_arguments": "Arguments",
+    "workflow.node.input_variables": "Input Variables",
+    "workflow.node.service_helper_text": "Please select the service you want to request first.",
+    "workflow.node.trigger_switch_label": "Content",
+    "workflow.valid.edge_id_duplicated": "The edge (connecting node {1} and {2}) ID is duplicated.",
+    "workflow.valid.invalid_edge_id": "The edge (connecting node {1} and {2}) ID is invalid.",
+    "workflow.valid.invalid_edge_type": "The edge (connecting node {1} and {2}) type is invalid.",
+    "workflow.valid.invalid_email": "The {1} field value is not a valid email.",
+    "workflow.valid.invalid_node_id": "The {1} node ID is invalid.",
+    "workflow.valid.invalid_node_type": "The {1} node type is invalid.",
+    "workflow.valid.invalid_timer_interval": "The timer interval must be less than {1}.",
+    "workflow.valid.invalid_url": "The {1} field value is not a valid URL.",
+    "workflow.valid.max_length": "The {1} field length of the value you entered cannot exceed {2} digits.",
+    "workflow.valid.min_length": "The {1} field length of the value you entered should be greater than or equal to {0}.",
+    "workflow.valid.node_id_duplicated": "{1} and {2} node IDs are duplicated.",
+    "workflow.valid.node_parameters_required": "The {1} node parameters is required.",
+    "workflow.valid.parameter_required": "The {1} node parameter is required.",
+    "workflow.valid.range_length": "The length of the {1} field value should be greater than or equal to {2} and less than or equal to {3}.",
+    "workflow.valid.required": "The {1} field is required."
 }
