--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -199,5 +199,6 @@
     "valid.input.value": "Input value: {0} only.",
     "valid.input.version": "The version number does not comply with the specification.",
     "valid.resp.at_least_one": "Please select at least one {1}.",
-    "common.label.refresh": "Refresh Page"
+    "common.label.refresh": "Refresh Page",
+    "common.label.settings": "Settings"
 }
