feat: add simpleMqtt node config

--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -119,5 +119,6 @@
     "workflow.valid.parameter_required": "The {1} node parameter is required.",
     "workflow.valid.range_length": "The length of the {1} field value should be greater than or equal to {2} and less than or equal to {3}.",
     "workflow.valid.required": "The {1} field is required.",
-    "workflow.editor.input_placeholder_remark": "Add descriptions..."
+    "workflow.editor.input_placeholder_remark": "Add descriptions...",
+    "workflow.label.mqtt_node_name": "MQTT"
 }
