--- a/packages/locales/src/lang/cn/workflow.json
+++ b/packages/locales/src/lang/cn/workflow.json
@@ -119,5 +119,6 @@
     "workflow.valid.parameter_required": "{1} 节点参数为必填项。",
     "workflow.valid.range_length": "{1} 字段值的长度应大于或等于 {2}，小于或等于 {3}。",
     "workflow.valid.required": "{1}字段为必填字段。",
-    "workflow.editor.input_placeholder_remark": "添加描述..."
+    "workflow.editor.input_placeholder_remark": "添加描述...",
+    "workflow.label.mqtt_node_name": "MQTT"
 }
