--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -200,5 +200,6 @@
     "valid.input.version": "The version number does not comply with the specification.",
     "valid.resp.at_least_one": "Please select at least one {1}.",
     "common.label.refresh": "Refresh Page",
-    "common.label.settings": "Settings"
+    "common.label.settings": "Settings",
+    "common.label.data_source": "Data Source"
 }
